<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.github.justedlev</groupId>
	<artifactId>just-lockey</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<description>Authorization Server</description>

	<modules>
		<module>api</module>
		<module>api-model</module>
		<module>service</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jar.manifest.packageName>com.justedlev</jar.manifest.packageName>
		<mvn.repository.id>github</mvn.repository.id>
		<mvn.repository.name>GitHub Justedlev Apache Maven Packages</mvn.repository.name>
		<mvn.repository.url>https://maven.pkg.github.com/Justedlev/maven-repository</mvn.repository.url>
	</properties>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<source>${java.version}</source>
					<additionalOptions>-html5</additionalOptions>
					<additionalJOptions>--allow-script-in-comments</additionalJOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<packageName>${jar.manifest.packageName}</packageName>
						</manifest>
						<manifestEntries>
							<Created-By>Justedlev</Created-By>
							<Implementation-Title>${project.description}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<developers>
		<developer>
			<id>justedlev</id>
			<name>Edward L.</name>
			<email>jvstedlev@gmail.com</email>
			<url>https://github.com/Justedlev</url>
			<timezone>Asia/Jerusalem</timezone>
		</developer>
	</developers>
</project>